# eoxchip8

./: Cargo.toml
src/: lib.rs  main.rs
src/core/: memory.rs
src/core/cpu/: instructions.rs  main.rs  mod.rs  registers.rs
